syntax = "proto3";
package lh_proto;

import "google/protobuf/timestamp.proto";
import "lh_proto.proto";

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.common.proto.wfspec";

// The below relates to WFSpec.

message EdgePb {
    string sink_node_name = 1;
}

message NodePb {
    repeated EdgePb outgoing_edges = 1;
    oneof node {
        TaskNodePb task = 2;
        EntrypointNodePb entrypoint = 3;
        ExitNodePb exit = 4;
    }
}

message TaskNodePb {
    string task_def_name = 1;
    optional int32 timeout_seconds = 2;
    int32 retries = 3;
}

message EntrypointNodePb {

}

message ExitNodePb {

}

message VariableDefPb {
    VariableTypePb type = 1;
    optional VariableValuePb default_val = 2;
    bool required = 3;
}

message ThreadSpecPb {
    map<string, NodePb> nodes = 1;
    map<string, VariableDefPb> variable_defs = 2;
}

message WfSpecPb {
    string id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;

    map<string, ThreadSpecPb> thread_specs = 4;
    string entrypoint_thread_name = 5;

    LHStatusPb status = 6;
    string name = 7;

    int64 last_updated_offset = 8;
}

message TaskDefPb {
    string name = 1;
    google.protobuf.Timestamp created_at = 2;
}
